style(loading indicator in buttons): fixed alignment

--- a/app/client/stylesheets/components/pu-button.sass
+++ b/app/client/stylesheets/components/pu-button.sass
@@ -79,7 +79,6 @@
         margin-top: -3px
         width: 0
         vertical-align: middle
-        float: right
         transition: width .2s, opacity .2s
 
     // Hover state
